# Mawaqit_API_to_ics

./: .coverage  .eslintrc.json  .gitignore  Makefile  README  README.md  app.py  babel.config.js  jest.config.js  main.py  mawaqit_to_ics.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  result_tests.txt  setup.py
.github/workflows/: ci-cd.yml
Mawaqit_API/: .envrc  Makefile  README.md  requirements.txt
Planning_sync/: .envrc  .gitignore  Makefile  app.py  config.py  requirements.txt  source_mapper.py
Planning_sync/data/: horaires_priere_mashallah-oran_day.ics  metadata.json
Planning_sync/data/mosques_by_country/: afrique_du_sud4.json  albanie15.json  autriche34.json  azerbaidjan5.json  bahrein17.json  belgique608.json  benin1.json  cameroun5.json  chili2.json  coree_du_sud7.json  cote_divoire15.json  croatie1.json  cuba1.json  djibouti7.json  egypte71.json  eswatini1.json  etats-unis466.json  fidji3.json  ghana3.json  guinee-bissau1.json  honduras1.json  hongrie19.json  irak40.json  kirghizstan1.json  lettonie1.json  lituanie4.json  mali34.json  malte2.json  maurice6.json  mayotte187.json  montenegro28.json  niger2.json  nigeria5.json  perou3.json  roumanie11.json  russie8.json  saint-marin1.json  slovenie3.json  soudan1.json  sri_lanka26.json  (+6 more)
Planning_sync/modules/: empty_generator.py  empty_slots_generator.py  ics_generator.py  mawaqit_api.py  mosque_search.py  prayer_generator.py  slots_generator.py  time_segmenter.py
Planning_sync/static/: styles.css
Planning_sync/static/js/: map_loader.js  mosque_search.js
Planning_sync/templates/: error.html  index.html  planner.html  slot_editor.html
app/: __init__.py
app/controllers/: error_handlers.py  main.py
app/data/mosques_by_country/: bielorussie4.json  bresil11.json  bulgarie15.json  canada374.json  colombie2.json  comores12.json  france6947.json  iles_pitcairn1.json  indonesie303.json  irlande27.json  japon7.json  laos2.json  liban17.json  macedoine_du_nord10.json  maroc1289.json  oman65.json  pakistan18.json  panama6.json  portugal31.json  qatar17.json  royaume-uni275.json  salvador1.json  serbie3.json  singapour5.json  suisse188.json  tunisie2161.json  viet_nam2.json
app/models/: __init__.py  prayer.py
app/modules/: cache_manager.py  empty_generator.py  ics_parser.py  islamic_features.py  mawaqit_fetcher.py  mosque_search.py  mute_utils.py  option_features.py  prayer_generator.py  slot_editor.py  slot_utils.py  slots_generator.py  time_segmenter.py
app/static/css/: calendar.css  clock.css  landing.css  planner.css  styles.css  timeline.css
app/static/js/: calendar.js  clock.js  compact_map.js  landing.js  main.js  map.js  map_loader.js  mosque_search.js  planner.js  planner_page.js  timeline.js  utils.js
app/static/js/components/: calendar.js  clock.js  map.js  mosque_search.js  timeline.js
app/static/js/pages/: landing.js  planner_page.js
app/static/js/utils/: padding.js  utils.js
app/static/script/: source_mapper.py
app/templates/: error.html  index.html  planner.html  slot_editor.html
app/utils/: __init__.py  date_utils.py
app/views/: planner_view.py
config/: __init__.py  development.py  production.py  testing.py
controllers/: main.py
data/mosques_by_country/: algerie6641.json  allemagne1313.json  andorre1.json  angola4.json  arabie_saoudite190.json  argentine1.json  australie66.json  bangladesh24.json  bosnie-herzegovine9.json  burkina_faso12.json  danemark9.json  emirats_arabes_unis33.json  equateur2.json  espagne749.json  finlande37.json  guinee3.json  guyane_francaise4.json  inde86.json  iran8.json  italie674.json  jordanie233.json  koweit68.json  libye98.json  luxembourg31.json  malaisie125.json  martinique2.json  mauritanie18.json  norvege16.json  nouvelle-caledonie2.json  nouvelle-zelande5.json  pays-bas665.json  pologne16.json  senegal74.json  suriname1.json  syrie27.json  togo3.json  turquie101.json  ukraine4.json
docs/: README.md  api.md  ci-cd-pipeline.md  docs_server.py  documentation_updates.md  e2e-testing-status.md  features_integration.md  islamic_features_integration.md  project_review.md  setup.md  template.html  testing.md  timeline.md
mawaqit_api_to_ics.egg-info/: PKG-INFO  SOURCES.txt
modules/: empty_generator.py  mawaqit_api.py  mawaqit_fetcher.py  mosque_search.py  mute_utils.py  prayer_generator.py  slot_editor.py  slot_utils.py  slots_generator.py  time_segmenter.py
templates/: error.html  index.html
tests/: conftest.py
tests/e2e/: advanced-features.spec.js  core-features.spec.js  error-handling.spec.js  helpers.js  landing.spec.js  planner-basic.spec.js  planner-complete-flow.spec.js  planner-simple.spec.js  planner.spec.js  quick-test.spec.js  slot-editor.spec.js
tests/integration/: test_api.py  test_api_endpoints.py  test_ics_generation.py
tests/integration/api/: test_api.py  test_api_endpoints.py  test_basic_endpoints.py
tests/integration/modules/: test_mawaqit_fetcher.py  test_mosque_search_integration.py  test_planner_view.py  test_prayer_generator.py  test_slots_generator.py
tests/js/: calendar-views-manager.test.js  clock.test.js  landing.test.js  planner-page.test.js  planner.test.js  setup.js  timeline.test.js
tests/js/integration/: test_planner_integration.js
tests/js/unit/: test_calendar_component.js  test_calendar_views_manager.js  test_clock.js  test_landing.js  test_main.js  test_map.js  test_mosque_search.js  test_padding.js  test_planner_page.js  test_planner_utils.js  test_timeline.js  test_timeline_component.js  test_utils.js
tests/python/: conftest.py
tests/python/integration/: conftest.py
tests/python/integration/api/: test_api_endpoints.py  test_basic_endpoints.py
tests/python/integration/controllers/: test_main_controller.py
tests/python/integration/modules/: test_empty_generator_integration.py  test_mawaqit_fetcher.py  test_mosque_search_integration.py  (+4 more)
tests/unit/: test_mosque_search.py  test_prayer_generator.py  test_slot_utils.py  test_slots_generator.py
tests/unit/modules/: test_planner_view_unit.py  test_time_segmenter.py
views/: planner_view.py
(+8 files in other folders)
