[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mawaqit-api-to-ics"
version = "0.1.0"
description = "Convert Mawaqit prayer times to ICS format"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flask",
    "requests",
    "icalendar",
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html:htmlcov/python" 